--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <footer>&copy; GabrielDT02 
 
-        <a href="https://github.com/GabrielDT02?tab=repositories" target="_blank">
+        <a href="https://github.com/GabrielDineckTremarin" target="_blank">
             <img src="media/github-brands.svg" alt="" class="icon-social-media">
         </a>
 
