--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p></p>
     </div>
 
-    <footer>&copy; GabrielDT02 
+    <footer>&copy; Gabriel Dineck Tremarin
 
         <a href="https://github.com/GabrielDineckTremarin" target="_blank">
             <img src="media/github-brands.svg" alt="" class="icon-social-media">
